@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.6 1999/10/18 09:47:58 tiniou Exp $
+$Id: THANKS,v 1.7 1999/10/22 18:12:26 tiniou Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -28,6 +28,7 @@ Henry Katz		hkatz@hkatz.dialup.access.net
 Klaus Kudielka		kkudielk@cacofonix.nt.tuwien.ac.at
 Florian La Roche	florian@jurix.jura.uni-sb.de
 Greg Lutz		greglutz@ix.netcom.com
+Eric Maisonobe		virnet@nat.fr
 David Miller		davem@caip.rutgers.edu
 David Monro		davidm@cs.su.oz.au
 Lukas Nellen		L.Nellen@ThPhys.Uni-Heidelberg.DE
