@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.7 1999/10/18 09:47:58 tiniou Exp $
+$Id: CHANGES,v 1.8 1999/10/22 18:12:25 tiniou Exp $
 
 Changes between versions 0.4b7 and 0.4b8 (released ???????????????)
 ===================================================================
@@ -12,6 +12,10 @@ Changes between versions 0.4b7 and 0.4b8 (released ???????????????)
 3.	Small patch from Nuno Oliveira <nuno@eq.uc.pt> which fixes
 	a va_start/va_end problem on linux-ppc (always call va_start
 	va_end in pairs each time we use a vararg function).
+
+4.	Added again the DT_* constants because old libc does not
+	contain them :(. Thanks to Eric Maisonobe <virnet@nat.fr>
+	for submitting the bug report.
 
 Changes between versions 0.4b6 and 0.4b7 (released October 8, 1999)
 ===================================================================
